--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>irene's web</title>
 </head>
 <body bgcolor="#8fbc8f">
-<h1 align="center"><span style="color:red;font-size:2em;">A</span>sia University</h1>
+<h1 align="center"><span style="color:red;font-size:5em;">A</span><span style="color:blue;font-size:4em;">s</span><span style="color:blue;font-size:3em;">i</span><span style="color:blue;font-size:2em;">a</span> University</h1>
 <table border="0" align="center" width="300" >
 <tr align="center"width="25%">
     <td><a href="index.html"style="text-decoration: none;">首頁</a></td>
@@ -14,12 +14,7 @@
     <td><a href="four.html"style="text-decoration: none;">第四頁</a></td>
 </tr>
 </table>
-<ul>
-    <li></li>
-    <li></li>
-    <li></li>
-    <li></li>
-</ul>
+
 <p align="center">Asia University 資訊工程</p>
 </body>
 </html>
