--- a/index.html
+++ b/index.html
@@ -7,12 +7,87 @@
 <body bgcolor="#8fbc8f">
 <h1 align="center"><span style="color:red;font-size:5em;">A</span><span style="color:blue;font-size:4em;">s</span><span style="color:blue;font-size:3em;">i</span><span style="color:blue;font-size:2em;">a</span> University</h1>
 <table border="0" align="center" width="300" >
-<tr align="center"width="25%">
-    <td><a href="index.html"style="text-decoration: none;">首頁</a></td>
-    <td><a href="second.html"style="text-decoration: none;">第二頁</a></td>
-    <td><a href="three.html"style="text-decoration: none;">第三頁</a></td>
-    <td><a href="four.html"style="text-decoration: none;">第四頁</a></td>
+<tr align="center">
+    <td width="25%"><a href="index.html"style="text-decoration: none;">首頁</a></td>
+    <td width="25%"><a href="second.html"style="text-decoration: none;">第二頁</a></td>
+    <td width="25%"><a href="class.html"style="text-decoration: none;">課表</a></td>
+    <td width="25%"><a href="four.html"style="text-decoration: none;">第四頁</a></td>
 </tr>
+</table>
+<table border="1" width="600px"  align="center">
+    <tr align="center">
+        <th width="100px">時間</th>
+        <th width="100px">星期一</th>
+        <th width="100px">星期二</th>
+        <th width="100px">星期三</th>
+        <th width="100px">星期四</th>
+        <th width="100px">星期五</th>
+    </tr>
+    <tr align="center">
+        <td>9:10~10:00</td>
+        <td></td>
+        <td></td>
+        <td rowspan="2">網頁系統</td>
+        <td rowspan="3">數位系統設計</td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>10:10~11:00</td>
+        <td rowspan="2">教育與人生</td>
+        <td rowspan="2">視窗程式</td>
+        <td >網頁系統</td>
+        <td >數位系統設計</td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>11:10~12:00</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+    <!--<tr align="center"><td colspan="6">午休</td></tr>-->
+    <tr align="center">
+        <td>13:10~14:00</td>
+        <td>體育</td>
+        <td>視窗程式</td>
+        <td>資料結構</td>
+        <td>生活與藝術</td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>14:10~15:00</td>
+        <td>體育</td>
+        <td></td>
+        <td>資料結構</td>
+        <td>生活與藝術</td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>15:10~16:00</td>
+        <td>英文</td>
+        <td>多媒體</td>
+        <td>資料結構</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>16:10~17:00</td>
+        <td>英文</td>
+        <td>多媒體</td>
+        <td>學輔</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>17:10~18:00</td>
+        <td>多媒體</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
 </table>
 
 <p align="center">Asia University 資訊工程</p>
