--- a/class.html
+++ b/class.html
@@ -2,9 +2,74 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>課表</title>
 </head>
 <body>
+<table border="1" width="600px"  align="center">
+    <tr align="center">
+        <th width="100px">時間</th>
+        <th width="100px">星期一</th>
+        <th width="100px">星期二</th>
+        <th width="100px">星期三</th>
+        <th width="100px">星期四</th>
+        <th width="100px">星期五</th>
+    </tr>
+    <tr align="center">
+        <td>9:10~10:00</td>
+        <td></td>
+        <td></td>
+        <td rowspan="3">網頁系統</td>
+        <td rowspan="3">數位系統設計</td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>10:10~11:00</td>
+        <td rowspan="2">教育與人生</td>
+        <td rowspan="2">視窗程式</td>
+        <td ></td>
+
+    </tr>
+    <tr align="center">
+        <td>11:10~12:00</td>
+        <td></td>
+
+    </tr>
+    <tr align="center"><td colspan="6">午休</td></tr>
+    <tr align="center">
+        <td>13:10~14:00</td>
+        <td rowspan="2">體育</td>
+        <td>視窗程式</td>
+        <td rowspan="3">資料結構</td>
+        <td rowspan="2">生活與藝術</td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>14:10~15:00</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>15:10~16:00</td>
+        <td rowspan="2">英文</td>
+        <td rowspan="2">多媒體</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>16:10~17:00</td>
+        <td>學輔</td>
+        <td></td>
+        <td></td>
+    </tr>
+    <tr align="center">
+        <td>17:10~18:00</td>
+        <td>多媒體</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
+</table>
 
 </body>
 </html>
