--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>irene's web</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body bgcolor="#8fbc8f">
-<h1 align="center"><span style="color:red;font-size:5em;">A</span><span style="color:blue;font-size:4em;">s</span><span style="color:blue;font-size:3em;">i</span><span style="color:blue;font-size:2em;">a</span> University</h1>
-<table border="0" align="center" width="300" >
-<tr align="center">
-    <td width="25%"><a href="index.html"style="text-decoration: none;">首頁</a></td>
-    <td width="25%"><a href="second.html"style="text-decoration: none;">第二頁</a></td>
-    <td width="25%"><a href="class.html"style="text-decoration: none;">課表</a></td>
-    <td width="25%"><a href="four.html"style="text-decoration: none;">第四頁</a></td>
+<body bgcolor="#bc958f">
+<h1 style="margin:30px;"><span style="color:#45ffc6;font-size:4em;">A</span><span style="color:#5bffa1;font-size:4em;">s</span><span style="color:#69ff73;font-size:3em;">i</span><span style="color:#9cff61;font-size:2em;">a</span> University</h1>
+<table border="0" align="center" width="300" bgcolor="#a06005">
+<tr align="center" id="nav">
+    <td width="25%" bgcolor="#ffd35c" ><a href="index.html" style="text-decoration: none;color:#602338;font-size:1.3em;">首頁</a></td>
+    <td width="25%" bgcolor="#ffd35c"><a href="second.html"style="text-decoration: none;color:#602338;font-size:1.3em;">第二頁</a></td>
+    <td width="25%" bgcolor="#ffd35c"><a href="class.html"style="text-decoration: none;color:#602338;font-size:1.3em;">課表</a></td>
+    <td width="25%" bgcolor="#ffd35c"><a href="four.html"style="text-decoration: none;color:#602338;font-size:1.3em;">第四頁</a></td>
 </tr>
 </table>
 
-<p align="center">Asia University 資訊工程</p>
+<footer style="margin-bottom:50px;"><p align="center">Asia University 資訊工程</p></footer>
 </body>
 </html>
